Correct alternative solution, dark mode contrast

--- a/More/Logfile Analyzer Styling Data.css
+++ b/More/Logfile Analyzer Styling Data.css
@@ -1720,13 +1720,14 @@
 		}
 /* Numbrix */
 	svg.numbrix {
+		margin: .2em;
 		display: block;
 		width: 80%;
 	}
 		svg.numbrix rect.key {
 			stroke: #888;
 			stroke-width: 1.6px;
-			fill: #EEE
+			fill: #EEEA;
 		}
 		svg.numbrix text.key {
 			text-anchor: middle;
